src/views/Collection/scss/custom_index.scss
@import "../../../globalStyles/scss/variables.scss";

.h3 {
    color: white;
    letter-spacing: 0.1rem;
}

.collection-page {
  &__hero {
    background-color: $blue-overlay;
    background-blend-mode: multiply;
    background-size: cover;
    background-position: center;
    text-align: center;
    padding: 12rem 0;

    &-text {
      overflow: hidden;
    }

    &-action {
      color: $white;
      display: flex;
    }

    @media (max-width: $small-screen) {
      align-items: center;
      display: flex;
      flex-direction: column;
      height: calc(100vh - 56px);
      justify-content: space-between;
      padding: $spacer;

      &-text {
        margin-top: $spacer * 5;
        width: 100%;
      }

      &-action {
        color: $white;
        margin-bottom: $spacer * 3;
        width: 100%;
      }
    }

    &__subtitle {
      text-align: center;
      padding: $spacer $spacer * 3;
      margin-bottom: $spacer / 2;
      padding-top: 0px!important;
      padding-bottom: 0px!important;

      @media (max-width: $small-screen) {
        padding: 0.6rem $spacer;
        width: calc(100% - 4rem);
      }

      h1 {
        font-weight: 0;
        text-transform: none;
        color: $black;
        font-size: 2.5rem;
        font-weight: 0;
        font-family: $des-font-family;
        line-height: 1.5;

        @media (min-width: $small-screen) and (max-width: $medium-screen) {
          font-size: 38px;
        }
      }
    }

    &__title {
      display: flex;
      padding: $spacer $spacer * 3;
      margin-bottom: $spacer / 2;
      padding-top: 0px!important;
      padding-bottom: 0px!important;

      @media (max-width: $small-screen) {
        padding: 0.6rem $spacer;
        width: calc(100% - 4rem);
      }

      h1 {
        display: flex;
        font-weight: 0;
        text-transform: none;
        color: $white;
        font-size: 2.5rem;
        font-weight: 0;
        font-family: $des-font-family;
        line-height: 1.5;

        @media (min-width: $small-screen) and (max-width: $medium-screen) {
          font-size: 38px;
        }
      }

      h3 {
        color: white;
        letter-spacing: 0.1rem;
      }
    }
  }

  &__spacer {
    margin-top: 2rem;
  }

  &__categories {
    margin-bottom: 2rem;

    h1 {
      text-align: center;
      margin-bottom: 1rem;
    }

    h3 {
      text-transform: none;
      font-weight: 0;
      margin-bottom: 1rem;
    }

    &__list {
      display: grid;
      grid-template-columns: 1fr;
      grid-gap: 2rem;

      @media (min-width: $small-screen) {
        grid-template-columns: 1fr 1fr;

        > div {
          &:nth-child(3) {
            grid-column: 3 / 1;
          }

          &:nth-child(n + 4) {
            display: none;
          }
        }
      }

      a {
        text-decoration: none;
        color: $base-font-color;

        h3 {
          text-transform: none;
          font-weight: 0;

          &:after {
            content: url("../../../images/carousel-arrow.svg");
            display: flex;
            transform: rotate(180deg);
            margin-left: 1rem;
          }
        }
      }

      &__image {
        width: 100%;
        height: 30rem;
        background-size: cover;
        background-position: center;
        margin-bottom: 1rem;

        &--no-photo {
          background-color: $turquoise-light;
          background-repeat: no-repeat;
          background-size: contain;
        }
      }
    }
  }
}

.collection {
  &__header {
    text-align: center;
    padding-top: $spacer * 10;
    background-size: cover;
    background-color: $blue-overlay;
    background-blend-mode: multiply;
    background-position: center;

    &__title {
      background-color: none;
      display: flex;
      transform: skew(-45deg);
      padding: 1.5vw 9vw;

      h1 {
        display: flex;
        transform: skew(45deg);
        font-weight: $bold-font-weight;
        text-transform: none;
        color: $white;
        font-size: 8vw;
        font-weight: 300;
        font-family: $des-font-family;

        @media (min-width: $small-screen) {
          font-size: 4vw;
        }
      }
    }
  }

  &__description {

    padding-top: $spacer * 25;

    h2 {
      text-align: justify;
      padding: 5%;
      transform: none;
      color: $black;
      background-color: white;
      font-family: $sub-des-font-family;
      font-weight: 300;
      font-style: italic;
      font-size: 1.279rem;
      line-height: 1.7rem;
    }

  }

  &__footer {
    text-align: center;
    padding-top: $spacer * 10;
    background-size: cover;
    background-color: $blue-overlay;
    background-blend-mode: multiply;

    &__title {
      background-color: none;
      display: flex;
      transform: skew(-45deg);
      padding: 1.5vw 9vw;

      h1 {
        display: flex;
        transform: skew(45deg);
        font-weight: $bold-font-weight;
        text-transform: none;
        color: $white;
        font-size: 8vw;
        font-weight: 300;
        font-family: Miller Display Light,Georgia,"serif";

        @media (min-width: $small-screen) {
          font-size: 4vw;
        }
      }
    }
    
    &__booknow {
      padding-bottom: 3%;
    }
  }

  .products-list__products__subheader {
    display: none;
  }
}

